--- a/src/index.css
+++ b/src/index.css
@@ -105,6 +105,21 @@
   }
 }
 
+/* Disable text selection globally, with sensible exceptions */
+html, body, #root {
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none; /* Disable callout on iOS */
+}
+
+/* Allow text selection in inputs, textareas, editable areas, or elements marked to allow */
+input, textarea, [contenteditable="true"], .allow-select {
+  -webkit-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
+}
+
 @layer components {
   .puzzle-card {
     @apply flex items-center gap-3 p-5 bg-white rounded-xl border border-gray-100/50 shadow-sm transition-all duration-300 cursor-pointer hover:shadow-md hover:-translate-y-0.5 hover:border-gray-200/50 relative mx-1 my-0.5;
