new changes to pwa

--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@
   }
 
   /* PWA Mobile Landscape Optimizations */
-  @media (display-mode: standalone) and (orientation: landscape) and (max-height: 500px) {
+  @media (display-mode: standalone) and (orientation: landscape) {
     html, body, #root {
       height: 100vh;
       overflow: hidden;
